<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="project" type="hpg.org.samplegithubrepobrowser.model.dto.Project"/>
        <variable name="callback" type="hpg.org.samplegithubrepobrowser.view.callback.ProjectClickCallback"/>
    </data>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="@{() ->  callback.onClick(project)}"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            app:cardUseCompatPadding="true">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">

            <!-- Main content -->
            <LinearLayout
                    android:layout_marginStart="@dimen/item_horizontal_margin"
                    android:layout_marginEnd="@dimen/item_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/project_name"
                        android:textStyle="bold"
                        android:textSize="@dimen/project_text"
                        android:text="@{project.name}"/>

                <TextView
                        android:id="@+id/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/project_id"
                        android:textStyle="bold"
                        android:textSize="@dimen/project_text"
                        android:text="@{String.format(@string/id, project.id)}"/>

                <TextView
                        android:id="@+id/languages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/project_language"
                        android:textSize="@dimen/project_text"
                        android:text="@{String.format(@string/languages, project.language)}"/>

                <TextView
                        android:id="@+id/project_watchers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/project_watchers"
                        android:textSize="@dimen/project_text"
                        android:text="@{String.format(@string/watchers, project.watchers)}"/>
            </LinearLayout>

            <!-- Interested checkbox -->
            <CheckBox android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentEnd="true"
                      android:visibility="@{project.localOrder == null ? View.VISIBLE : View.GONE}"/>

            <!-- Or local-order -->
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/project_local_order"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/project_text"
                    android:text="@{String.format(@string/local_order, project.localOrder)}"
                    android:visibility="@{project.localOrder != null ? View.VISIBLE : View.GONE}"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</layout>