<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="project" type="hpg.org.samplegithubrepobrowser.model.dto.Project"/>
        <variable name="callback" type="hpg.org.samplegithubrepobrowser.view.callback.ProjectClickCallback"/>
    </data>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:onClick="@{() ->  callback.onClick(project)}"
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            app:cardUseCompatPadding="true">

        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">

            <!-- Main content -->
            <LinearLayout
                    android:layout_marginStart="@dimen/item_horizontal_margin"
                    android:layout_marginEnd="@dimen/item_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="5dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/project_name"
                        android:textStyle="bold"
                        android:textSize="@dimen/project_text"
                        android:text="@{project.name}"/>

                <TextView
                        android:id="@+id/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/project_id"
                        android:textSize="@dimen/project_text"
                        android:text="@{String.format(@string/id, project.id)}"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/project_local_order"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/project_text"
                    android:text="@{String.format(@string/local_order, project.localOrder)}"
                    android:visibility="@{project.localOrder != null ? View.VISIBLE : View.GONE}"
                    tools:ignore="RelativeOverlap"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</layout>